# data_channel

./: .gitignore  CMakeLists.txt  CompressThread.txt  README.md  README_RUS.md  WriteThread.txt  channel_data.h  i_compressor.h  mantissa_compressor.cpp  producer.cpp
src/common/: channel_data.h  logger.h  semaphore.cpp  semaphore.h  shared_memory_base.h  shared_memory_consumer.h  shared_memory_producer.h  zfp_codec.cpp  zfp_codec.h
src/consumer/: consumer.cpp  consumer_core.cpp  consumer_core.h
src/producer/: producer.cpp  producer_core.cpp  producer_core.h
